--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+    "name": "app-unicad-react",
+    "version": "0.0.0",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -11,12 +13,18 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
+    },
+    "dependencies": {
+        "font-awesome": "^4.7.0",
+        "react-router-dom": "^4.3.1"
     }
 }
