--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
+        "react-google-maps": "^9.4.5",
         "react-router-dom": "^4.3.1"
     }
 }
